Ahem, here is the TFS on tags that is fixed. Noob city over here.

--- a/StackOverFaux.Web/Web.config
+++ b/StackOverFaux.Web/Web.config
@@ -18,7 +18,7 @@
   <connectionStrings>
 	<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
 	<!--<add name="SoFConnStr" connectionString="Data Source=localhost\Jungle;Initial Catalog=StackOverFaux;Integrated Security=SSPI;MultipleActiveResultSets=True;Application Name=StackOverFauxWeb" providerName="System.Data.SqlClient" />-->
-	<add name="SoFConnStr" connectionString="Server=192.168.1.113;Port=5432;Database=stackoverfaux;User Id=postgres;Password=asdf;CommandTimeout=20;" providerName="Npgsql" />
+	<add name="SoFConnStr" connectionString="Server=localhost;Port=5432;Database=stackoverfaux;User Id=postgres;Password=Tekpub!;CommandTimeout=20;" providerName="Npgsql" />
   </connectionStrings>
 
   <appSettings>
