--- a/StackOverFaux.Web/Web.Release.config
+++ b/StackOverFaux.Web/Web.Release.config
@@ -3,18 +3,14 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
-    
+  
     <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+      <add name="SoFConnStr"
+        connectionString="Server=127.0.0.1;Port=5432;Database=stackoverfaux;User Id=postgres;Password=Tekpub!;CommandTimeout=20;" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
-  <system.web>
+
+    <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
       In the example below, the "Replace" transform will replace the entire 
