--- a/StackOverFaux.Web/Web.config
+++ b/StackOverFaux.Web/Web.config
@@ -23,7 +23,7 @@
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
     <!--<add name="SoFConnStr" connectionString="Data Source=localhost\Jungle;Initial Catalog=StackOverFaux;Integrated Security=SSPI;MultipleActiveResultSets=True;Application Name=StackOverFauxWeb" providerName="System.Data.SqlClient" />-->
-    <add name="SoFConnStr" connectionString="Server=db.stackoverfaux.com;Port=5432;Database=stackoverfaux;User Id=postgres;Password=Tekpub!;CommandTimeout=20;" providerName="Npgsql" />
+    <add name="SoFConnStr" connectionString="Server=127.0.0.1;Port=5432;Database=stackoverfaux;User Id=postgres;Password=Tekpub!;CommandTimeout=20;" providerName="Npgsql" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
